[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/dice_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/CustomOutlineButton.gd" type="Script" id=2]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Mocha Assets/Icons.PNG" type="Texture" id=4]
[ext_resource path="res://UI/CustomFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sound Effects/Button Sounds/Button_click_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound Effects/Button Sounds/Passing_Mouse_Over_Buttons_1.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec2 uv = UV;
	
	if (active == true){
		if (add_margins) {
			vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
			
			uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
			
			if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
				COLOR.a = 0.0;
			} else {
				COLOR = texture(TEXTURE, uv);
			}
		} else {
			COLOR = texture(TEXTURE, uv);
		}
		
		if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
			COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
			COLOR.a += (1.0 - COLOR.a) * color.a;
		}
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="DynamicFont" id=19]
size = 40
outline_size = 1
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="CustomOutlineButton" type="Area2D"]
script = ExtResource( 2 )

[node name="Result" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 4

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="TopicSlot" type="Position2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -96.0
margin_top = -48.0
margin_right = 97.0
margin_bottom = -15.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 19 )
text = "Thing"
align = 1

[node name="PercentageGroup" type="Node2D" parent="."]

[node name="Icon1" type="Sprite" parent="PercentageGroup"]
position = Vector2( -94, 28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="Label2" type="Label" parent="PercentageGroup/Icon1"]
margin_left = 14.0
margin_top = -34.0
margin_right = 207.0
margin_bottom = 28.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "25%"
align = 1

[node name="Icon2" type="Sprite" parent="PercentageGroup"]
position = Vector2( 48, 27 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="Label3" type="Label" parent="PercentageGroup/Icon2"]
margin_left = 12.0
margin_top = -32.0
margin_right = 205.0
margin_bottom = 30.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "50%"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="OverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="input_event" from="." to="." method="_on_2DOutlineButton_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
